# nudt-rm-auto-aim-training

./: .gitignore
auto_aim_old/src/auto_aim/: Doxyfile  README.md
auto_aim_old/src/auto_aim/armor_detector/: CMakeLists.txt  README.md  package.xml
auto_aim_old/src/auto_aim/armor_detector/include/armor_detector/: armor.hpp  detector.hpp  detector_node.hpp  number_classifier.hpp  pnp_solver.hpp  yolov5.hpp
auto_aim_old/src/auto_aim/armor_detector/model/: mlp100_0506.onnx  mlp150_0506.onnx  mlp_f.onnx  readme.txt
auto_aim_old/src/auto_aim/armor_detector/src/: detector.cpp  detector_node.cpp  number_classifier.cpp  pnp_solver.cpp
auto_aim_old/src/auto_aim/armor_processor/: CMakeLists.txt  README.md  package.xml
auto_aim_old/src/auto_aim/armor_processor/include/armor_processor/: extended_kalman_filter.hpp  processor_node.hpp  tracker.hpp
auto_aim_old/src/auto_aim/armor_processor/src/: extended_kalman_filter.cpp  processor_node.cpp  tracker.cpp
auto_aim_old/src/auto_aim/docs/: README_DOXYGEN.md
auto_aim_old/src/auto_aim/docs/diagrams/: auto_aim_classes.puml
auto_aim_old/src/auto_aim/docs/doxygen/html/: annotated.html  annotated_dup.js  armor_8hpp.html  armor_8hpp.js  armor_8hpp__dep__incl.map  armor_8hpp__dep__incl.md5  armor_8hpp__incl.map  armor_8hpp__incl.md5  armor_8hpp_source.html  classes.html  classrm__auto__aim_1_1ArmorDetectorNode-members.html  classrm__auto__aim_1_1ArmorDetectorNode.html  (+187 more)
auto_aim_old/src/hik_camera/: package.xml
auto_aim_old/src/hik_camera/config/: camera_info.yaml  camera_info_1.yaml  camera_params.yaml
auto_aim_old/src/hik_camera/hikSDK/include/: MvCameraControl.h
auto_aim_old/src/hik_camera/src/: hik_camera_node.cpp
auto_aim_old/src/jlcv_description/: CMakeLists.txt  README.md  package.xml
auto_aim_old/src/jlcv_description/launch/: view_model.launch.py  view_model.rviz
auto_aim_old/src/jlcv_description/meshes/: camera_link.STL
auto_aim_old/src/jlcv_description/urdf/: rm_gimbal.urdf.xacro
auto_aim_old/src/jlcv_interfaces/: CMakeLists.txt  package.xml
auto_aim_old/src/jlcv_interfaces/msg/: Armor.msg  Armors.msg  DebugArmor.msg  GameStatus.msg  Measurement.msg  Target.msg
auto_aim_old/src/jlcv_interfaces/srv/: ResetColor.srv
auto_aim_old/src/jlcv_serial_driver/: CMakeLists.txt  README.md  package.xml
auto_aim_old/src/jlcv_serial_driver/config/: serial_driver.yaml
auto_aim_old/src/jlcv_serial_driver/include/jlcv_serial_driver/: jlcv_serial_driver.hpp  packet.hpp
auto_aim_old/src/jlcv_serial_driver/launch/: serial_driver.launch.py
auto_aim_old/src/jlcv_serial_driver/src/: crc.cpp  jlcv_serial_driver.cpp
auto_aim_old/src/solve_angle/: CMakeLists.txt  README.md  package.xml
auto_aim_old/src/solve_angle/include/rmoss_projectile_motion/: gaf_projectile_solver.hpp  gravity_projectile_solver.hpp  iterative_projectile_tool.hpp  projectile_solver_interface.hpp
auto_aim_old/src/solve_angle/include/solve_angle/: solve_angle.hpp
auto_aim_old/src/solve_angle/src/: gravity_projectile_solver.cpp  iterative_projectile_tool.cpp  solve_angle.cpp
auto_aim_old/src/vision_bringup/: CMakeLists.txt  package.xml
auto_aim_old/src/vision_bringup/config/: camera_info.yaml  camera_info1.yaml  launch_params.yaml  node_params.yaml
auto_aim_old/src/vision_bringup/launch/: common.py  no_hardware.launch.py  vision_bringup.launch.py
auto_aim_old/src/vision_bringup/rviz/: default.rviz
first-homework/: 作业内容
first-homework/Liu-jinhao/: README.md  greenball_homework.py
first-homework/Qi-huanye/src/: main.cpp
first-homework/Zhang-Qiheng/: README.md
first-homework/Zhang-Qiheng/cpp/: CMakeLists.txt  config.json
first-homework/Zhang-Qiheng/cpp/src/: main.cpp
first-homework/guoyuyang25/: README.md  ball_tracking.py
first-homework/wanghuarui/: config.json  config_readme.txt  readme.md
first-homework/wanghuarui/src/: main.py  test.py  test_connected.py
first-homework/week1-greenball/Zhang-Qiheng/python/: config.json  config_readme.txt  main_p.py
first-homework/week1-greenball/liujinhao/: README.md  track_green_ball.py
first-homework/yidayulin/: greenball.py
first-homework/zhangqiheng/Zhang-Qiheng/: diff.py
first-homework/zhangqiheng/Zhang-Qiheng/doc/: compare.md  experience.md
first-homework/zhangqiheng/Zhang-Qiheng/python/data/: speed.csv
first-homework/zhangqiheng/Zhang-Qiheng/src/: diff.py  diff_result.csv
first-homework/zhangqiheng/Zhang-Qiheng/src/Merge/: CMakeLists.txt  config.json  detector.py  start.sh  tracker.cpp
first-homework/zhangqiheng/Zhang-Qiheng/src/cpp/: config.json
first-homework/zhangqiheng/Zhang-Qiheng/src/output/: frame_speed.csv
first-homework/zhangqiheng/Zhang-Qiheng/src/python/: config.json  main_p.py
first-homework/zhouzheng/: CMakeLists.txt  first_homework.cpp  first_homework_技术文档.md
week1/: balltracker.py  xuebowen的说明
week1/.trae/documents/: ball_tracking_plan.md
(+74 files in other folders)
